<resources>
    <string name="app_name">mCashUI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Riddhik Mohite</string>
    <string name="nav_header_subtitle">riddhikmohite@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_FAQ"></string>
    <string name="action_InviteFriend"></string>

    <string name="menu_home">Home</string>
    <string name="menu_redeem">Redeem</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_inviteAFriend">Invite a Friend</string>
    <string name="menu_rateus">Rate Us</string>
    <string name="menu_helpAndSupport">Help and Support</string>
    <string name="menu_privacyPolicy">Privacy Poilicy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_reward">Daily Reward</string>
    <string name="log_in_daily_to_claim_free_ncoins">Log in daily to claim free\ncoins!</string>
    <string name="log_in_daily_to_claim_free_n_coins">Log in daily to claim free\n coins!</string>
    <string name="daily_rewards">Daily Rewards</string>
    <string name="task_rewards">Task Rewards</string>
    <string name="complete_tasks_to_get_coins">Complete tasks to get coins.</string>
    <string name="bullet"> \u25CF</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="notification">Notification</string>
</resources>