<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mcashui.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_redeem"
        android:name="com.example.mcashui.ui.redeem.redeem"
        android:label="@string/menu_redeem"
        tools:layout="@layout/fragment_redeem" />
    <fragment
        android:id="@+id/nav_transaction"
        android:name="com.example.mcashui.ui.transaction.transaction"
        android:label="@string/menu_transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/nav_rateUs"
        android:name="com.example.mcashui.ui.rateUs.rateUs"
        android:label="@string/menu_rateus"
        tools:layout="@layout/fragment_rate_us" />

    <fragment
        android:id="@+id/nav_inviteAFriend"
        android:name="com.example.mcashui.ui.inviteAFriend.inviteFriend"
        android:label="@string/menu_inviteAFriend"
        tools:layout="@layout/fragment_invite_friend" />

    <fragment
        android:id="@+id/nav_helpAndSupport"
        android:name="com.example.mcashui.ui.helpAndSupport.helpAndSupport"
        android:label="@string/menu_helpAndSupport"
        tools:layout="@layout/fragment_help_and_support" />

    <fragment
        android:id="@+id/nav_privacyPolicy"
        android:name="com.example.mcashui.ui.privacyPolicy.privacypolicy"
        android:label="@string/menu_privacyPolicy"
        tools:layout="@layout/fragment_privacypolicy" />
</navigation>